added a method to change the date of publishing to make a bit more sense

--- a/static/styles.css
+++ b/static/styles.css
@@ -27,7 +27,7 @@ body {
     font-size: 0.9em;
     color: #777;
     margin-bottom: 20px;
-    text-align: center;
+    text-align: right;
 }
 
 /* Content Section */
