--- a/templates/article.html
+++ b/templates/article.html
@@ -15,7 +15,7 @@
 
         <!-- Date Section -->
         <div class="article-date">
-            <p>Published on: {{ date }}</p>
+            <p>{{ date }}</p>
         </div>
 
         <!-- Content Section -->
